changed carbohydrates to calories

--- a/cluster_and_tagging.ipynb
+++ b/cluster_and_tagging.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b16566bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -19,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "84d1ef2e",
    "metadata": {},
    "outputs": [],
@@ -36,7 +45,7 @@
    "outputs": [],
    "source": [
     "nutrient_cols = [\n",
-    "    'FAT (g)', 'PROT (g)', 'Carbohydrates (kcal)',\n",
+    "    'FAT (g)', 'PROT (g)', 'Calories (kcal)',\n",
     "    'VITB1 (mg)', 'RIBF (mg)', 'VITB6 (mg)', 'VITB12 (µg)', 'VITD (µg)',\n",
     "    'VITE (mg)', 'VITC (mg)', 'VITA (µg)',\n",
     "    'Calcium (mg)', 'Iron (mg)', 'Magnesium (mg)', 'Phosphorus (mg)',\n",
@@ -53,15 +62,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean['Protein_per_kcal'] = df_clean['PROT (g)'] / (df_clean['Carbohydrates (kcal)'] + df_clean['FAT (g)'] + 1)\n",
+    "df_clean['Protein_per_kcal'] = df_clean['PROT (g)'] / (df_clean['Calories (kcal)'] + df_clean['FAT (g)'] + 1)\n",
     "df_clean['Fat_to_Protein'] = df_clean['FAT (g)'] / (df_clean['PROT (g)'] + 1)\n",
-    "df_clean['Carb_to_Protein'] = df_clean['Carbohydrates (kcal)'] / (df_clean['PROT (g)'] + 1)\n",
+    "df_clean['Carb_to_Protein'] = df_clean['Calories (kcal)'] / (df_clean['PROT (g)'] + 1)\n",
     "df_clean['Sodium_to_Potassium'] = df_clean['Sodium (mg)'] / (df_clean['Potassium (mg)'] + 1)\n",
     "\n",
     "micro_cols = ['VITB1 (mg)', 'RIBF (mg)', 'VITB6 (mg)', 'VITB12 (µg)', 'VITD (µg)', \n",
     "              'VITE (mg)', 'VITC (mg)', 'VITA (µg)', 'Calcium (mg)', 'Iron (mg)', \n",
     "              'Magnesium (mg)', 'Phosphorus (mg)', 'Potassium (mg)', 'Zinc (mg)']\n",
-    "df_clean['Micronutrient_Density'] = df_clean[micro_cols].sum(axis=1) / (df_clean['Carbohydrates (kcal)'] + 1)\n",
+    "df_clean['Micronutrient_Density'] = df_clean[micro_cols].sum(axis=1) / (df_clean['Calories (kcal)'] + 1)\n",
     "\n",
     "features = nutrient_cols + [\n",
     "    'Protein_per_kcal', 'Fat_to_Protein', 'Carb_to_Protein',\n",
@@ -82,18 +91,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "172ebed3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Optimal number of clusters (diet types): 4 (Silhouette = 0.318)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sil_scores = {}\n",
     "for k in range(3, 9):\n",
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "4d4c5984",
    "metadata": {},
    "outputs": [],
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "7ab67ce2",
    "metadata": {},
    "outputs": [
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ab74b2a2",
    "metadata": {},
    "outputs": [
@@ -281,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "705dc61a",
    "metadata": {},
    "outputs": [],
@@ -320,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "5b58a15c",
    "metadata": {},
    "outputs": [],
@@ -330,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "f4561628",
    "metadata": {},
    "outputs": [
@@ -354,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "c8ef216f",
    "metadata": {},
    "outputs": [
@@ -773,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "310c0c91",
    "metadata": {},
    "outputs": [
@@ -822,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "b8b2e725",
    "metadata": {},
    "outputs": [],
@@ -832,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "9a3b8b2c",
    "metadata": {},
    "outputs": [
@@ -861,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "4d2e1769",
    "metadata": {},
    "outputs": [],
@@ -871,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "c611e6ad",
    "metadata": {},
    "outputs": [],
@@ -886,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "1c802d9a",
    "metadata": {},
    "outputs": [],
@@ -896,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "158935aa",
    "metadata": {},
    "outputs": [
@@ -1206,12 +1207,12 @@
     }
    ],
    "source": [
-    "df_clean_demo"
+    "df_clean_demo.head(4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "631939b7",
    "metadata": {},
    "outputs": [
@@ -1235,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "d8789e26",
    "metadata": {},
    "outputs": [
@@ -1258,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "a6cc8126",
    "metadata": {},
    "outputs": [
@@ -1291,7 +1292,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cssci",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1305,7 +1306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
