--- a/nutri_data_clean.ipynb
+++ b/nutri_data_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "id": "05d98dc4-9e77-47a4-86ab-01af86964da1",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "id": "17a98176",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "id": "15052993",
    "metadata": {},
    "outputs": [
@@ -517,14 +517,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "id": "1b5479ab",
    "metadata": {},
    "outputs": [],
    "source": [
     "#rename nutri columns \n",
     "clean_data.rename(columns={\"Engelse naam/Food name\": \"food_name\"}, inplace=True)\n",
-    "clean_data.rename(columns={\"ENERCC (kcal)\": \"Carbohydrates (kcal)\"}, inplace=True)\n",
+    "clean_data.rename(columns={\"ENERCC (kcal)\": \"Calories (kcal)\"}, inplace=True)\n",
     "clean_data.rename(columns={\"THIA (mg)\": \"VITB1 (mg)\"}, inplace=True)\n",
     "clean_data.rename(columns={\"VITA_RE (µg)\": \"VITA (µg)\"}, inplace=True)\n",
     "clean_data.rename(columns={\"CA (mg)\": \"Calcium (mg)\"}, inplace=True)\n",
@@ -538,13 +538,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "id": "f52e457a",
    "metadata": {},
    "outputs": [],
    "source": [
     "nutrients = [\n",
-    "    'FAT (g)', 'PROT (g)', 'Carbohydrates (kcal)', 'VITB1 (mg)', 'RIBF (mg)', \n",
+    "    'FAT (g)', 'PROT (g)', 'Calories (kcal)', 'VITB1 (mg)', 'RIBF (mg)', \n",
     "    'VITB6 (mg)', 'VITB12 (µg)', 'VITD (µg)', 'VITE (mg)', 'VITC (mg)', 'VITA (µg)',\n",
     "    'Calcium (mg)', 'Iron (mg)', 'Magnesium (mg)', 'Phosphorus (mg)',\n",
     "    'Potassium (mg)', 'Sodium (mg)', 'Zinc (mg)'\n",
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 13,
    "id": "04591c21",
    "metadata": {},
    "outputs": [
@@ -574,7 +574,7 @@
       "Hoeveelheid/Quantity      0\n",
       "FAT (g)                   0\n",
       "PROT (g)                  0\n",
-      "Carbohydrates (kcal)      0\n",
+      "Calories (kcal)           0\n",
       "VITB1 (mg)               54\n",
       "RIBF (mg)                51\n",
       "VITB6 (mg)               97\n",
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 14,
    "id": "3d3d56df",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
        "      <th>Hoeveelheid/Quantity</th>\n",
        "      <th>FAT (g)</th>\n",
        "      <th>PROT (g)</th>\n",
-       "      <th>Carbohydrates (kcal)</th>\n",
+       "      <th>Calories (kcal)</th>\n",
        "      <th>VITB1 (mg)</th>\n",
        "      <th>RIBF (mg)</th>\n",
        "      <th>VITB6 (mg)</th>\n",
@@ -951,31 +951,31 @@
        "2319               Bakery mix for doughnuts Dutch style             per 100g   \n",
        "2320                                         Cheese 35+             per 100g   \n",
        "\n",
-       "      FAT (g)  PROT (g)  Carbohydrates (kcal)  VITB1 (mg)  RIBF (mg)  \\\n",
-       "0         0.0       2.0                  88.0        0.12       0.04   \n",
-       "1         0.0       2.0                  88.0        0.12       0.04   \n",
-       "2         0.0       2.0                  88.0        0.12       0.04   \n",
-       "3         1.5      12.3                 356.0        0.10       0.06   \n",
-       "4         1.0       7.0                 352.0        0.04       0.03   \n",
-       "...       ...       ...                   ...         ...        ...   \n",
-       "2316      1.7       3.0                  60.0        0.02       0.20   \n",
-       "2317     10.5      15.0                 185.0        0.04       0.17   \n",
-       "2318      4.7      17.6                 128.0        0.03       0.18   \n",
-       "2319      1.0      11.0                 367.0        0.09       0.09   \n",
-       "2320     20.4      27.3                 302.0        0.03       0.27   \n",
+       "      FAT (g)  PROT (g)  Calories (kcal)  VITB1 (mg)  RIBF (mg)  VITB6 (mg)  \\\n",
+       "0         0.0       2.0             88.0        0.12       0.04       0.300   \n",
+       "1         0.0       2.0             88.0        0.12       0.04       0.300   \n",
+       "2         0.0       2.0             88.0        0.12       0.04       0.220   \n",
+       "3         1.5      12.3            356.0        0.10       0.06       0.080   \n",
+       "4         1.0       7.0            352.0        0.04       0.03       0.120   \n",
+       "...       ...       ...              ...         ...        ...         ...   \n",
+       "2316      1.7       3.0             60.0        0.02       0.20       0.047   \n",
+       "2317     10.5      15.0            185.0        0.04       0.17       0.041   \n",
+       "2318      4.7      17.6            128.0        0.03       0.18       0.091   \n",
+       "2319      1.0      11.0            367.0        0.09       0.09       0.134   \n",
+       "2320     20.4      27.3            302.0        0.03       0.27       0.058   \n",
        "\n",
-       "      VITB6 (mg)  ...  VITA (µg)  Calcium (mg)  Iron (mg)  Magnesium (mg)  \\\n",
-       "0          0.300  ...        1.0           6.0        0.5            22.0   \n",
-       "1          0.300  ...        0.0           6.0        0.5            14.0   \n",
-       "2          0.220  ...        1.0           6.0        0.5            17.0   \n",
-       "3          0.080  ...        0.0          15.0        2.0            53.0   \n",
-       "4          0.120  ...        0.0          10.0        0.4            13.0   \n",
-       "...          ...  ...        ...           ...        ...             ...   \n",
-       "2316       0.047  ...        0.0         115.0        0.5            22.0   \n",
-       "2317       0.041  ...        0.0         100.0        3.9            12.0   \n",
-       "2318       0.091  ...        0.0          88.0        1.7            60.0   \n",
-       "2319       0.134  ...        0.0          22.0        1.0            21.0   \n",
-       "2320       0.058  ...      200.0         959.0        0.2            36.0   \n",
+       "      ...  VITA (µg)  Calcium (mg)  Iron (mg)  Magnesium (mg)  \\\n",
+       "0     ...        1.0           6.0        0.5            22.0   \n",
+       "1     ...        0.0           6.0        0.5            14.0   \n",
+       "2     ...        1.0           6.0        0.5            17.0   \n",
+       "3     ...        0.0          15.0        2.0            53.0   \n",
+       "4     ...        0.0          10.0        0.4            13.0   \n",
+       "...   ...        ...           ...        ...             ...   \n",
+       "2316  ...        0.0         115.0        0.5            22.0   \n",
+       "2317  ...        0.0         100.0        3.9            12.0   \n",
+       "2318  ...        0.0          88.0        1.7            60.0   \n",
+       "2319  ...        0.0          22.0        1.0            21.0   \n",
+       "2320  ...      200.0         959.0        0.2            36.0   \n",
        "\n",
        "      Phosphorus (mg)  Potassium (mg)  Sodium (mg)  Zinc (mg)  \\\n",
        "0                60.0           450.0          2.0       0.37   \n",
@@ -1019,7 +1019,7 @@
        "[2007 rows x 24 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 15,
    "id": "d620de64",
    "metadata": {},
    "outputs": [
@@ -1038,15 +1038,15 @@
      "data": {
       "text/plain": [
        "Index(['NEVO-code', 'Food group', 'food_name', 'Hoeveelheid/Quantity',\n",
-       "       'FAT (g)', 'PROT (g)', 'Carbohydrates (kcal)', 'VITB1 (mg)',\n",
-       "       'RIBF (mg)', 'VITB6 (mg)', 'VITB12 (µg)', 'VITD (µg)', 'VITE (mg)',\n",
-       "       'VITC (mg)', 'VITA (µg)', 'Calcium (mg)', 'Iron (mg)', 'Magnesium (mg)',\n",
+       "       'FAT (g)', 'PROT (g)', 'Calories (kcal)', 'VITB1 (mg)', 'RIBF (mg)',\n",
+       "       'VITB6 (mg)', 'VITB12 (µg)', 'VITD (µg)', 'VITE (mg)', 'VITC (mg)',\n",
+       "       'VITA (µg)', 'Calcium (mg)', 'Iron (mg)', 'Magnesium (mg)',\n",
        "       'Phosphorus (mg)', 'Potassium (mg)', 'Sodium (mg)', 'Zinc (mg)',\n",
        "       'food_wheel_group', 'food_wheel_subgroup'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,13 +1057,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "id": "93c5e9c5",
    "metadata": {},
    "outputs": [],
    "source": [
     "clean_data = clean_data[['NEVO-code', 'food_name',\n",
-    "                         'FAT (g)', 'PROT (g)', 'Carbohydrates (kcal)',\n",
+    "                         'FAT (g)', 'PROT (g)', 'Calories (kcal)',\n",
     "                         'VITB1 (mg)', 'RIBF (mg)', 'VITB6 (mg)', 'VITB12 (µg)', 'VITD (µg)',\n",
     "                         'VITE (mg)', 'VITC (mg)', 'VITA (µg)', 'Calcium (mg)', 'Iron (mg)',\n",
     "                         'Magnesium (mg)', 'Phosphorus (mg)', 'Potassium (mg)', 'Sodium (mg)',\n",
@@ -1072,18 +1072,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 19,
    "id": "d2c372c3",
    "metadata": {},
    "outputs": [],
    "source": [
     "clean_data.to_csv('clean_data.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a513df5d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cssci",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1097,7 +1105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
