--- a/rdf_file.ipynb
+++ b/rdf_file.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "id": "aca2bcb5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from rdflib import Graph, Namespace, Literal, RDF, RDFS, XSD, URIRef\n",
@@ -14,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "9d55ac6e",
    "metadata": {},
    "outputs": [],
@@ -25,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "7a75ac47",
    "metadata": {},
    "outputs": [
@@ -64,8 +73,8 @@
     "    g.add((food_uri, FN.NEVOCode, Literal(str(row[\"NEVO-code\"]), datatype=XSD.string)))\n",
     "\n",
     "    # Nutritional data\n",
-    "    if not pd.isnull(row.get(\"Carbohydrates (kcal)\")):\n",
-    "        g.add((food_uri, FN.hasCarbohydrates, Literal(row[\"Carbohydrates (kcal)\"], datatype=XSD.float)))\n",
+    "    if not pd.isnull(row.get(\"Calories (kcal)\")):\n",
+    "        g.add((food_uri, FN.hasCalories, Literal(row[\"Calories (kcal)\"], datatype=XSD.float)))\n",
     "    if not pd.isnull(row.get(\"PROT (g)\")):\n",
     "        g.add((food_uri, FN.hasProtein, Literal(row[\"PROT (g)\"], datatype=XSD.float)))\n",
     "    if not pd.isnull(row.get(\"FAT (g)\")):\n",
@@ -101,11 +110,19 @@
     "g.serialize(\"food_ontology.ttl\", format=\"turtle\")\n",
     "print(\"RDF Turtle file generated: food_ontology.ttl\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3375275b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cssci",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -119,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
