--- a/rdf_file.ipynb
+++ b/rdf_file.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "aca2bcb5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
-      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from rdflib import Graph, Namespace, Literal, RDF, RDFS, XSD, URIRef\n",
@@ -23,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "9d55ac6e",
    "metadata": {},
    "outputs": [],
@@ -34,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "7a75ac47",
    "metadata": {},
    "outputs": [
@@ -42,7 +33,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RDF Turtle file generated: food_ontology.ttl\n"
+      "RDF file generated: food_nutrition.rdf\n",
+      "RDF Turtle file generated: food_nutrition.ttl\n"
      ]
     }
    ],
@@ -106,9 +98,13 @@
     "        benefit_uri = URIRef(FN + quote(row[\"benefits\"], safe=\"\"))\n",
     "        g.add((food_uri, FN.hasBenefit, benefit_uri))\n",
     "\n",
+    "# Save as RDF\n",
+    "g.serialize(\"food_nutrition.rdf\", format=\"xml\")\n",
+    "print(\"RDF file generated: food_nutrition.rdf\")\n",
+    "\n",
     "# Serialize RDF to Turtle\n",
-    "g.serialize(\"food_ontology.ttl\", format=\"turtle\")\n",
-    "print(\"RDF Turtle file generated: food_ontology.ttl\")"
+    "g.serialize(\"food_nutrition.ttl\", format=\"turtle\")\n",
+    "print(\"RDF Turtle file generated: food_nutrition.ttl\")"
    ]
   },
   {
@@ -122,7 +118,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "cssci",
    "language": "python",
    "name": "python3"
   },
@@ -136,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
