--- a/nutri_data_clean.ipynb
+++ b/nutri_data_clean.ipynb
@@ -1079,19 +1079,11 @@
    "source": [
     "clean_data.to_csv('clean_data.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a513df5d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "cssci",
    "language": "python",
    "name": "python3"
   },
@@ -1105,7 +1097,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
