--- a/queries.ipynb
+++ b/queries.ipynb
@@ -2,18 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "5b4ad62b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from rdflib import Graph\n",
+    "from rdflib import Graph, Literal, RDF, URIRef, Namespace\n",
     "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
+   "id": "ffd7e2a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Graph identifier=N8d1713d7584b49478ce355f84b8cddcb (<class 'rdflib.graph.Graph'>)>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = Graph()\n",
+    "g.parse(\"food_nutrition.ttl\", format=\"turtle\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "43cc1421",
    "metadata": {},
    "outputs": [],
@@ -126,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "e292154d",
    "metadata": {},
    "outputs": [],
@@ -148,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "2569b3a2",
    "metadata": {},
    "outputs": [
@@ -159,36 +181,36 @@
       "Running query -> landing_page_groups.json\n",
       "Rows: 5\n",
       "{\n",
-      "  \"group\": \"Bread_grain_cereal_products_and_potatoes\"\n",
+      "  \"group\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\"\n",
       "}\n",
       "{\n",
-      "  \"group\": \"Dairy_nuts_fish_legumes_meat_and_eggs\"\n",
+      "  \"group\": \"Dairy%2C%20nuts%2C%20fish%2C%20legumes%2C%20meat%20and%20eggs\"\n",
       "}\n",
       "{\n",
       "  \"group\": \"Drinks\"\n",
       "}\n",
       "{\n",
-      "  \"group\": \"Spreading_and_cooking_fats\"\n",
+      "  \"group\": \"Spreading%20and%20cooking%20fats\"\n",
       "}\n",
       "{\n",
-      "  \"group\": \"Vegetables_and_fruit\"\n",
+      "  \"group\": \"Vegetables%20and%20fruit\"\n",
       "}\n",
       "Running query -> subgroups_overview.json\n",
       "Rows: 8\n",
       "{\n",
-      "  \"group\": \"Bread_grain_cereal_products_and_potatoes\",\n",
-      "  \"subgroup\": \"Bread_grain_cereal_products_and_potatoes\"\n",
+      "  \"group\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\",\n",
+      "  \"subgroup\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\"\n",
       "}\n",
       "{\n",
-      "  \"group\": \"Dairy_nuts_fish_legumes_meat_and_eggs\",\n",
+      "  \"group\": \"Dairy%2C%20nuts%2C%20fish%2C%20legumes%2C%20meat%20and%20eggs\",\n",
       "  \"subgroup\": \"Dairy\"\n",
       "}\n",
       "{\n",
-      "  \"group\": \"Dairy_nuts_fish_legumes_meat_and_eggs\",\n",
-      "  \"subgroup\": \"Fish_legumes_meat_and_eggs\"\n",
+      "  \"group\": \"Dairy%2C%20nuts%2C%20fish%2C%20legumes%2C%20meat%20and%20eggs\",\n",
+      "  \"subgroup\": \"Fish%2C%20legumes%2C%20meat%20and%20eggs\"\n",
       "}\n",
       "{\n",
-      "  \"group\": \"Dairy_nuts_fish_legumes_meat_and_eggs\",\n",
+      "  \"group\": \"Dairy%2C%20nuts%2C%20fish%2C%20legumes%2C%20meat%20and%20eggs\",\n",
       "  \"subgroup\": \"Nuts\"\n",
       "}\n",
       "{\n",
@@ -200,50 +222,45 @@
       "Rows: 30\n",
       "{\n",
       "  \"foodName\": \"Brussel sprouts raw\",\n",
-      "  \"diet\": \"['Plant-Focused_Flexitarian_Diet'_'Vegetarian']\",\n",
-      "  \"benefit\": \"['High_in_VITC_(mg)']\",\n",
+      "  \"diet\": \"%5B%27Plant-Focused%20Flexitarian%20Diet%27%2C%20%27Vegetarian%27%5D\",\n",
+      "  \"benefit\": \"%5B%27High%20in%20VITC%20%28mg%29%27%5D\",\n",
       "  \"protein\": 2.3,\n",
-      "  \"carbs\": 46.0,\n",
       "  \"fat\": 0.7,\n",
       "  \"vitaminC\": 150.0,\n",
       "  \"iron\": 0.6\n",
       "}\n",
       "{\n",
       "  \"foodName\": \"Sweet pepper red raw\",\n",
-      "  \"diet\": \"['Plant-Focused_Flexitarian_Diet'_'Vegetarian']\",\n",
-      "  \"benefit\": \"['High_in_VITC_(mg)']\",\n",
+      "  \"diet\": \"%5B%27Plant-Focused%20Flexitarian%20Diet%27%2C%20%27Vegetarian%27%5D\",\n",
+      "  \"benefit\": \"%5B%27High%20in%20VITC%20%28mg%29%27%5D\",\n",
       "  \"protein\": 0.8,\n",
-      "  \"carbs\": 25.0,\n",
       "  \"fat\": 0.1,\n",
       "  \"vitaminC\": 150.0,\n",
       "  \"iron\": 0.4\n",
       "}\n",
       "{\n",
       "  \"foodName\": \"Sweet pepper av raw\",\n",
-      "  \"diet\": \"['Plant-Focused_Flexitarian_Diet'_'Vegetarian']\",\n",
-      "  \"benefit\": \"['High_in_VITC_(mg)']\",\n",
+      "  \"diet\": \"%5B%27Plant-Focused%20Flexitarian%20Diet%27%2C%20%27Vegetarian%27%5D\",\n",
+      "  \"benefit\": \"%5B%27High%20in%20VITC%20%28mg%29%27%5D\",\n",
       "  \"protein\": 0.8,\n",
-      "  \"carbs\": 25.0,\n",
       "  \"fat\": 0.1,\n",
       "  \"vitaminC\": 140.0,\n",
       "  \"iron\": 0.4\n",
       "}\n",
       "{\n",
       "  \"foodName\": \"Sweet pepper orange raw\",\n",
-      "  \"diet\": \"['Plant-Focused_Flexitarian_Diet'_'Vegetarian']\",\n",
-      "  \"benefit\": \"['High_in_VITC_(mg)']\",\n",
+      "  \"diet\": \"%5B%27Plant-Focused%20Flexitarian%20Diet%27%2C%20%27Vegetarian%27%5D\",\n",
+      "  \"benefit\": \"%5B%27High%20in%20VITC%20%28mg%29%27%5D\",\n",
       "  \"protein\": 0.8,\n",
-      "  \"carbs\": 28.0,\n",
       "  \"fat\": 0.3,\n",
       "  \"vitaminC\": 133.0,\n",
       "  \"iron\": 0.4\n",
       "}\n",
       "{\n",
       "  \"foodName\": \"Brussel sprouts boiled\",\n",
-      "  \"diet\": \"['Plant-Focused_Flexitarian_Diet'_'Vegetarian']\",\n",
-      "  \"benefit\": \"['High_in_VITC_(mg)']\",\n",
+      "  \"diet\": \"%5B%27Plant-Focused%20Flexitarian%20Diet%27%2C%20%27Vegetarian%27%5D\",\n",
+      "  \"benefit\": \"%5B%27High%20in%20VITC%20%28mg%29%27%5D\",\n",
       "  \"protein\": 2.3,\n",
-      "  \"carbs\": 47.0,\n",
       "  \"fat\": 0.7,\n",
       "  \"vitaminC\": 132.0,\n",
       "  \"iron\": 0.6\n",
@@ -276,128 +293,119 @@
       "Rows: 25\n",
       "{\n",
       "  \"foodName\": \"Egg powder chicken\",\n",
-      "  \"group\": \"Dairy_nuts_fish_legumes_meat_and_eggs\",\n",
-      "  \"subgroup\": \"Fish_legumes_meat_and_eggs\",\n",
+      "  \"group\": \"Dairy%2C%20nuts%2C%20fish%2C%20legumes%2C%20meat%20and%20eggs\",\n",
+      "  \"subgroup\": \"Fish%2C%20legumes%2C%20meat%20and%20eggs\",\n",
       "  \"protein\": 46.0,\n",
-      "  \"fat\": 42.0,\n",
-      "  \"carbs\": 574.0\n",
+      "  \"fat\": 42.0\n",
       "}\n",
       "{\n",
       "  \"foodName\": \"Cheese Parmesan\",\n",
-      "  \"group\": \"Dairy_nuts_fish_legumes_meat_and_eggs\",\n",
+      "  \"group\": \"Dairy%2C%20nuts%2C%20fish%2C%20legumes%2C%20meat%20and%20eggs\",\n",
       "  \"subgroup\": \"Dairy\",\n",
       "  \"protein\": 40.0,\n",
-      "  \"fat\": 27.0,\n",
-      "  \"carbs\": 404.0\n",
+      "  \"fat\": 27.0\n",
       "}\n",
       "{\n",
       "  \"foodName\": \"Flour soya full fat\",\n",
-      "  \"group\": \"Bread_grain_cereal_products_and_potatoes\",\n",
-      "  \"subgroup\": \"Bread_grain_cereal_products_and_potatoes\",\n",
+      "  \"group\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\",\n",
+      "  \"subgroup\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\",\n",
       "  \"protein\": 38.0,\n",
-      "  \"fat\": 23.0,\n",
-      "  \"carbs\": 478.0\n",
+      "  \"fat\": 23.0\n",
       "}\n",
       "{\n",
       "  \"foodName\": \"Pork stewing meat prepared\",\n",
-      "  \"group\": \"Dairy_nuts_fish_legumes_meat_and_eggs\",\n",
-      "  \"subgroup\": \"Fish_legumes_meat_and_eggs\",\n",
+      "  \"group\": \"Dairy%2C%20nuts%2C%20fish%2C%20legumes%2C%20meat%20and%20eggs\",\n",
+      "  \"subgroup\": \"Fish%2C%20legumes%2C%20meat%20and%20eggs\",\n",
       "  \"protein\": 37.4,\n",
-      "  \"fat\": 14.5,\n",
-      "  \"carbs\": 280.0\n",
+      "  \"fat\": 14.5\n",
       "}\n",
       "{\n",
-      "  \"foodName\": \"Pork shoulder chop prepared\",\n",
-      "  \"group\": \"Dairy_nuts_fish_legumes_meat_and_eggs\",\n",
-      "  \"subgroup\": \"Fish_legumes_meat_and_eggs\",\n",
+      "  \"foodName\": \"Pork gammon steak prepared\",\n",
+      "  \"group\": \"Dairy%2C%20nuts%2C%20fish%2C%20legumes%2C%20meat%20and%20eggs\",\n",
+      "  \"subgroup\": \"Fish%2C%20legumes%2C%20meat%20and%20eggs\",\n",
       "  \"protein\": 37.1,\n",
-      "  \"fat\": 17.7,\n",
-      "  \"carbs\": 308.0\n",
+      "  \"fat\": 17.7\n",
       "}\n",
       "... (20 more rows)\n",
       "Running query -> foods_potassium.json\n",
       "Rows: 135\n",
       "{\n",
       "  \"foodName\": \"Abricots dried and soaked\",\n",
-      "  \"benefit\": \"['High_in_Potassium_(mg)']\"\n",
+      "  \"benefit\": \"%5B%27High%20in%20Potassium%20%28mg%29%27%5D\"\n",
       "}\n",
       "{\n",
       "  \"foodName\": \"Almonds blanched salted\",\n",
-      "  \"benefit\": \"['High_in_FAT_(g)'_'High_in_Carbohydrates_(kcal)'_'High_in_RIBF_(mg)'_'High_in_VITE_(mg)'_'High_in_Calcium_(mg)'_'High_in_Iron_(mg)'_'High_in_Magnesium_(mg)'_'High_in_Phosphorus_(mg)'_'High_in_Potassium_(mg)']\"\n",
+      "  \"benefit\": \"%5B%27High%20in%20FAT%20%28g%29%27%2C%20%27High%20in%20Calories%20%28kcal%29%27%2C%20%27High%20in%20RIBF%20%28mg%29%27%2C%20%27High%20in%20VITE%20%28mg%29%27%2C%20%27High%20in%20Calcium%20%28mg%29%27%2C%20%27High%20in%20Iron%20%28mg%29%27%2C%20%27High%20in%20Magnesium%20%28mg%29%27%2C%20%27High%20in%20Phosphorus%20%28mg%29%27%2C%20%27High%20in%20Potassium%20%28mg%29%27%5D\"\n",
       "}\n",
       "{\n",
       "  \"foodName\": \"Almonds blanched unsalted\",\n",
-      "  \"benefit\": \"['High_in_FAT_(g)'_'High_in_Carbohydrates_(kcal)'_'High_in_RIBF_(mg)'_'High_in_VITE_(mg)'_'High_in_Calcium_(mg)'_'High_in_Iron_(mg)'_'High_in_Magnesium_(mg)'_'High_in_Phosphorus_(mg)'_'High_in_Potassium_(mg)']\"\n",
+      "  \"benefit\": \"%5B%27High%20in%20FAT%20%28g%29%27%2C%20%27High%20in%20Calories%20%28kcal%29%27%2C%20%27High%20in%20RIBF%20%28mg%29%27%2C%20%27High%20in%20VITE%20%28mg%29%27%2C%20%27High%20in%20Calcium%20%28mg%29%27%2C%20%27High%20in%20Iron%20%28mg%29%27%2C%20%27High%20in%20Magnesium%20%28mg%29%27%2C%20%27High%20in%20Phosphorus%20%28mg%29%27%2C%20%27High%20in%20Potassium%20%28mg%29%27%5D\"\n",
       "}\n",
       "{\n",
       "  \"foodName\": \"Almonds w skin salted\",\n",
-      "  \"benefit\": \"['High_in_FAT_(g)'_'High_in_PROT_(g)'_'High_in_Carbohydrates_(kcal)'_'High_in_RIBF_(mg)'_'High_in_VITE_(mg)'_'High_in_Calcium_(mg)'_'High_in_Iron_(mg)'_'High_in_Magnesium_(mg)'_'High_in_Phosphorus_(mg)'_'High_in_Potassium_(mg)']\"\n",
+      "  \"benefit\": \"%5B%27High%20in%20FAT%20%28g%29%27%2C%20%27High%20in%20PROT%20%28g%29%27%2C%20%27High%20in%20Calories%20%28kcal%29%27%2C%20%27High%20in%20RIBF%20%28mg%29%27%2C%20%27High%20in%20VITE%20%28mg%29%27%2C%20%27High%20in%20Calcium%20%28mg%29%27%2C%20%27High%20in%20Iron%20%28mg%29%27%2C%20%27High%20in%20Magnesium%20%28mg%29%27%2C%20%27High%20in%20Phosphorus%20%28mg%29%27%2C%20%27High%20in%20Potassium%20%28mg%29%27%5D\"\n",
       "}\n",
       "{\n",
       "  \"foodName\": \"Almonds w skin unsalted\",\n",
-      "  \"benefit\": \"['High_in_FAT_(g)'_'High_in_PROT_(g)'_'High_in_Carbohydrates_(kcal)'_'High_in_RIBF_(mg)'_'High_in_VITE_(mg)'_'High_in_Calcium_(mg)'_'High_in_Iron_(mg)'_'High_in_Magnesium_(mg)'_'High_in_Phosphorus_(mg)'_'High_in_Potassium_(mg)']\"\n",
+      "  \"benefit\": \"%5B%27High%20in%20FAT%20%28g%29%27%2C%20%27High%20in%20PROT%20%28g%29%27%2C%20%27High%20in%20Calories%20%28kcal%29%27%2C%20%27High%20in%20RIBF%20%28mg%29%27%2C%20%27High%20in%20VITE%20%28mg%29%27%2C%20%27High%20in%20Calcium%20%28mg%29%27%2C%20%27High%20in%20Iron%20%28mg%29%27%2C%20%27High%20in%20Magnesium%20%28mg%29%27%2C%20%27High%20in%20Phosphorus%20%28mg%29%27%2C%20%27High%20in%20Potassium%20%28mg%29%27%5D\"\n",
       "}\n",
       "... (130 more rows)\n",
       "Running query -> all_foods.json\n",
       "Rows: 1335\n",
       "{\n",
       "  \"foodName\": \"Bakery mix for apple pie\",\n",
-      "  \"group\": \"Bread_grain_cereal_products_and_potatoes\",\n",
-      "  \"subgroup\": \"Bread_grain_cereal_products_and_potatoes\",\n",
-      "  \"diet\": \"['Plant-Focused_Flexitarian_Diet'_'Vegetarian']\",\n",
+      "  \"group\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\",\n",
+      "  \"subgroup\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\",\n",
+      "  \"diet\": \"%5B%27Plant-Focused%20Flexitarian%20Diet%27%2C%20%27Vegetarian%27%5D\",\n",
       "  \"protein\": 9.4,\n",
-      "  \"carbs\": 341.0,\n",
       "  \"fat\": 1.1,\n",
       "  \"vitaminC\": 0.0,\n",
       "  \"iron\": 0.7\n",
       "}\n",
       "{\n",
       "  \"foodName\": \"Bakery mix for cake plain\",\n",
-      "  \"group\": \"Bread_grain_cereal_products_and_potatoes\",\n",
-      "  \"subgroup\": \"Bread_grain_cereal_products_and_potatoes\",\n",
-      "  \"diet\": \"['Plant-Focused_Flexitarian_Diet'_'Vegetarian']\",\n",
+      "  \"group\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\",\n",
+      "  \"subgroup\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\",\n",
+      "  \"diet\": \"%5B%27Plant-Focused%20Flexitarian%20Diet%27%2C%20%27Vegetarian%27%5D\",\n",
       "  \"protein\": 5.1,\n",
-      "  \"carbs\": 367.0,\n",
       "  \"fat\": 0.6,\n",
       "  \"vitaminC\": 0.0,\n",
       "  \"iron\": 0.4\n",
       "}\n",
       "{\n",
       "  \"foodName\": \"Bakery mix for chocolate cake\",\n",
-      "  \"group\": \"Bread_grain_cereal_products_and_potatoes\",\n",
-      "  \"subgroup\": \"Bread_grain_cereal_products_and_potatoes\",\n",
-      "  \"diet\": \"['Plant-Focused_Flexitarian_Diet'_'Vegetarian']\",\n",
+      "  \"group\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\",\n",
+      "  \"subgroup\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\",\n",
+      "  \"diet\": \"%5B%27Plant-Focused%20Flexitarian%20Diet%27%2C%20%27Vegetarian%27%5D\",\n",
       "  \"protein\": 6.4,\n",
-      "  \"carbs\": 377.0,\n",
       "  \"fat\": 3.6,\n",
       "  \"vitaminC\": 0.0,\n",
       "  \"iron\": 1.2\n",
       "}\n",
       "{\n",
       "  \"foodName\": \"Bakery mix for doughnuts Dutch style\",\n",
-      "  \"group\": \"Bread_grain_cereal_products_and_potatoes\",\n",
-      "  \"subgroup\": \"Bread_grain_cereal_products_and_potatoes\",\n",
-      "  \"diet\": \"['Plant-Focused_Flexitarian_Diet'_'Vegetarian']\",\n",
-      "  \"benefit\": \"['High_in_Sodium_(mg)']\",\n",
+      "  \"group\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\",\n",
+      "  \"subgroup\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\",\n",
+      "  \"diet\": \"%5B%27Plant-Focused%20Flexitarian%20Diet%27%2C%20%27Vegetarian%27%5D\",\n",
+      "  \"benefit\": \"%5B%27High%20in%20Sodium%20%28mg%29%27%5D\",\n",
       "  \"protein\": 11.0,\n",
-      "  \"carbs\": 367.0,\n",
       "  \"fat\": 1.0,\n",
       "  \"vitaminC\": 0.0,\n",
       "  \"iron\": 1.0\n",
       "}\n",
       "{\n",
       "  \"foodName\": \"Bakery mix for pancakes\",\n",
-      "  \"group\": \"Bread_grain_cereal_products_and_potatoes\",\n",
-      "  \"subgroup\": \"Bread_grain_cereal_products_and_potatoes\",\n",
-      "  \"diet\": \"['Plant-Focused_Flexitarian_Diet'_'Vegetarian']\",\n",
-      "  \"benefit\": \"['High_in_Sodium_(mg)']\",\n",
+      "  \"group\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\",\n",
+      "  \"subgroup\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\",\n",
+      "  \"diet\": \"%5B%27Plant-Focused%20Flexitarian%20Diet%27%2C%20%27Vegetarian%27%5D\",\n",
+      "  \"benefit\": \"%5B%27High%20in%20Sodium%20%28mg%29%27%5D\",\n",
       "  \"protein\": 10.6,\n",
-      "  \"carbs\": 322.0,\n",
       "  \"fat\": 1.2,\n",
       "  \"vitaminC\": 0.0,\n",
       "  \"iron\": 0.8\n",
       "}\n",
-      "... (1330 more rows)\n"
+      "... (1330 more rows)\n",
+      "Saved 1335 rows to all_foods.json\n"
      ]
     }
    ],
@@ -417,10 +425,11 @@
     "    if len(data) > 5:\n",
     "        print(f\"... ({len(data)-5} more rows)\")\n",
     "\n",
-    "    #with open(filename, \"w\", encoding=\"utf-8\") as f:\n",
-    "        #json.dump(data, f, indent=2, ensure_ascii=False)\n",
     "\n",
-    "    #print(f\"Saved {len(data)} rows to {filename}\")"
+    "with open(\"all_foods.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(data, f, indent=2, ensure_ascii=False)\n",
+    "\n",
+    "print(f\"Saved {len(data)} rows to {filename}\")"
    ]
   }
  ],
