--- a/queries.ipynb
+++ b/queries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "5b4ad62b",
    "metadata": {},
    "outputs": [],
@@ -13,17 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "ffd7e2a7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Graph identifier=N8d1713d7584b49478ce355f84b8cddcb (<class 'rdflib.graph.Graph'>)>"
+       "<Graph identifier=N92f2dbe30d0b42408bcf4ef274702516 (<class 'rdflib.graph.Graph'>)>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "43cc1421",
    "metadata": {},
    "outputs": [],
@@ -127,19 +127,20 @@
     "\n",
     "    \"all_foods.json\": \"\"\"\n",
     "        PREFIX fn: <http://example.org/food-nutrition#>\n",
-    "        SELECT ?foodName ?group ?subgroup ?diet ?benefit ?protein ?carbs ?fat ?vitaminC ?iron\n",
-    "        WHERE {\n",
+    "        SELECT ?foodName ?group ?subgroup ?diet ?benefit ?calories ?fat ?iron ?protein ?vitaminB12 ?vitaminC ?vitaminD        WHERE {\n",
     "          ?food a fn:Food ;\n",
     "                fn:foodName ?foodName ;\n",
     "                fn:belongsToFoodWheelGroup ?group ;\n",
     "                fn:belongsToFoodWheelSubGroup ?subgroup .\n",
     "          OPTIONAL { ?food fn:belongsToDiet ?diet }\n",
     "          OPTIONAL { ?food fn:hasBenefit ?benefit }\n",
-    "          OPTIONAL { ?food fn:hasProtein ?protein }\n",
-    "          OPTIONAL { ?food fn:hasCarbohydrates ?carbs }\n",
+    "          OPTIONAL { ?food fn:hasCalories ?calories }\n",
     "          OPTIONAL { ?food fn:hasFat ?fat }\n",
-    "          OPTIONAL { ?food fn:hasVitaminC ?vitaminC }\n",
     "          OPTIONAL { ?food fn:hasIron ?iron }\n",
+    "          OPTIONAL { ?food fn:hasProtein ?protein }\n",
+    "          OPTIONAL { ?food fn:hasVitaminB12 ?vitaminB12 }\n",
+    "          OPTIONAL { ?food fn:hasVitaminC ?vitaminC }\n",
+    "          OPTIONAL { ?food fn:hasVitaminD ?vitaminD }\n",
     "        }\n",
     "        ORDER BY ?group ?subgroup ?foodName\n",
     "    \"\"\"\n",
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "e292154d",
    "metadata": {},
    "outputs": [],
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "2569b3a2",
    "metadata": {},
    "outputs": [
@@ -350,62 +351,22 @@
       "  \"benefit\": \"%5B%27High%20in%20FAT%20%28g%29%27%2C%20%27High%20in%20PROT%20%28g%29%27%2C%20%27High%20in%20Calories%20%28kcal%29%27%2C%20%27High%20in%20RIBF%20%28mg%29%27%2C%20%27High%20in%20VITE%20%28mg%29%27%2C%20%27High%20in%20Calcium%20%28mg%29%27%2C%20%27High%20in%20Iron%20%28mg%29%27%2C%20%27High%20in%20Magnesium%20%28mg%29%27%2C%20%27High%20in%20Phosphorus%20%28mg%29%27%2C%20%27High%20in%20Potassium%20%28mg%29%27%5D\"\n",
       "}\n",
       "... (130 more rows)\n",
-      "Running query -> all_foods.json\n",
-      "Rows: 1335\n",
-      "{\n",
-      "  \"foodName\": \"Bakery mix for apple pie\",\n",
-      "  \"group\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\",\n",
-      "  \"subgroup\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\",\n",
-      "  \"diet\": \"%5B%27Plant-Focused%20Flexitarian%20Diet%27%2C%20%27Vegetarian%27%5D\",\n",
-      "  \"protein\": 9.4,\n",
-      "  \"fat\": 1.1,\n",
-      "  \"vitaminC\": 0.0,\n",
-      "  \"iron\": 0.7\n",
-      "}\n",
-      "{\n",
-      "  \"foodName\": \"Bakery mix for cake plain\",\n",
-      "  \"group\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\",\n",
-      "  \"subgroup\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\",\n",
-      "  \"diet\": \"%5B%27Plant-Focused%20Flexitarian%20Diet%27%2C%20%27Vegetarian%27%5D\",\n",
-      "  \"protein\": 5.1,\n",
-      "  \"fat\": 0.6,\n",
-      "  \"vitaminC\": 0.0,\n",
-      "  \"iron\": 0.4\n",
-      "}\n",
-      "{\n",
-      "  \"foodName\": \"Bakery mix for chocolate cake\",\n",
-      "  \"group\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\",\n",
-      "  \"subgroup\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\",\n",
-      "  \"diet\": \"%5B%27Plant-Focused%20Flexitarian%20Diet%27%2C%20%27Vegetarian%27%5D\",\n",
-      "  \"protein\": 6.4,\n",
-      "  \"fat\": 3.6,\n",
-      "  \"vitaminC\": 0.0,\n",
-      "  \"iron\": 1.2\n",
-      "}\n",
-      "{\n",
-      "  \"foodName\": \"Bakery mix for doughnuts Dutch style\",\n",
-      "  \"group\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\",\n",
-      "  \"subgroup\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\",\n",
-      "  \"diet\": \"%5B%27Plant-Focused%20Flexitarian%20Diet%27%2C%20%27Vegetarian%27%5D\",\n",
-      "  \"benefit\": \"%5B%27High%20in%20Sodium%20%28mg%29%27%5D\",\n",
-      "  \"protein\": 11.0,\n",
-      "  \"fat\": 1.0,\n",
-      "  \"vitaminC\": 0.0,\n",
-      "  \"iron\": 1.0\n",
-      "}\n",
-      "{\n",
-      "  \"foodName\": \"Bakery mix for pancakes\",\n",
-      "  \"group\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\",\n",
-      "  \"subgroup\": \"Bread%2C%20grain%2Fcereal%20products%20and%20potatoes\",\n",
-      "  \"diet\": \"%5B%27Plant-Focused%20Flexitarian%20Diet%27%2C%20%27Vegetarian%27%5D\",\n",
-      "  \"benefit\": \"%5B%27High%20in%20Sodium%20%28mg%29%27%5D\",\n",
-      "  \"protein\": 10.6,\n",
-      "  \"fat\": 1.2,\n",
-      "  \"vitaminC\": 0.0,\n",
-      "  \"iron\": 0.8\n",
-      "}\n",
-      "... (1330 more rows)\n",
-      "Saved 1335 rows to all_foods.json\n"
+      "Running query -> all_foods.json\n"
+     ]
+    },
+    {
+     "ename": "ParseException",
+     "evalue": "Expected {SelectQuery | ConstructQuery | DescribeQuery | AskQuery}, found '?'  (at char 155), (line:3, col:99)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mParseException\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[23], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m filename, query \u001b[38;5;129;01min\u001b[39;00m queries\u001b[38;5;241m.\u001b[39mitems():\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRunning query -> \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfilename\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m     results \u001b[38;5;241m=\u001b[39m \u001b[43mg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mquery\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquery\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m     data \u001b[38;5;241m=\u001b[39m [row_to_dict(row) \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m results]\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRows: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(data)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/cssci/lib/python3.11/site-packages/rdflib/graph.py:1633\u001b[0m, in \u001b[0;36mGraph.query\u001b[0;34m(self, query_object, processor, result, initNs, initBindings, use_store_provided, **kwargs)\u001b[0m\n\u001b[1;32m   1630\u001b[0m     processor \u001b[38;5;241m=\u001b[39m plugin\u001b[38;5;241m.\u001b[39mget(processor, query\u001b[38;5;241m.\u001b[39mProcessor)(\u001b[38;5;28mself\u001b[39m)\n\u001b[1;32m   1632\u001b[0m \u001b[38;5;66;03m# type error: Argument 1 to \"Result\" has incompatible type \"Mapping[str, Any]\"; expected \"str\"\u001b[39;00m\n\u001b[0;32m-> 1633\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m result(\u001b[43mprocessor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mquery\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquery_object\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minitBindings\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minitNs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/cssci/lib/python3.11/site-packages/rdflib/plugins/sparql/processor.py:145\u001b[0m, in \u001b[0;36mSPARQLProcessor.query\u001b[0;34m(self, strOrQuery, initBindings, initNs, base, DEBUG)\u001b[0m\n\u001b[1;32m    125\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    126\u001b[0m \u001b[38;5;124;03mEvaluate a query with the given initial bindings, and initial\u001b[39;00m\n\u001b[1;32m    127\u001b[0m \u001b[38;5;124;03mnamespaces. The given base is used to resolve relative URIs in\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    141\u001b[0m \u001b[38;5;124;03m   documentation.\u001b[39;00m\n\u001b[1;32m    142\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    144\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(strOrQuery, \u001b[38;5;28mstr\u001b[39m):\n\u001b[0;32m--> 145\u001b[0m     strOrQuery \u001b[38;5;241m=\u001b[39m translateQuery(\u001b[43mparseQuery\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstrOrQuery\u001b[49m\u001b[43m)\u001b[49m, base, initNs)\n\u001b[1;32m    147\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m evalQuery(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgraph, strOrQuery, initBindings, base)\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/cssci/lib/python3.11/site-packages/rdflib/plugins/sparql/parser.py:1553\u001b[0m, in \u001b[0;36mparseQuery\u001b[0;34m(q)\u001b[0m\n\u001b[1;32m   1550\u001b[0m     q \u001b[38;5;241m=\u001b[39m q\u001b[38;5;241m.\u001b[39mdecode(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m   1552\u001b[0m q \u001b[38;5;241m=\u001b[39m expandUnicodeEscapes(q)\n\u001b[0;32m-> 1553\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mQuery\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparseString\u001b[49m\u001b[43m(\u001b[49m\u001b[43mq\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparseAll\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/cssci/lib/python3.11/site-packages/pyparsing/core.py:1141\u001b[0m, in \u001b[0;36mParserElement.parse_string\u001b[0;34m(self, instring, parse_all, parseAll)\u001b[0m\n\u001b[1;32m   1138\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m\n\u001b[1;32m   1139\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1140\u001b[0m         \u001b[38;5;66;03m# catch and re-raise exception from here, clearing out pyparsing internal stack trace\u001b[39;00m\n\u001b[0;32m-> 1141\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m exc\u001b[38;5;241m.\u001b[39mwith_traceback(\u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m   1142\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1143\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m tokens\n",
+      "\u001b[0;31mParseException\u001b[0m: Expected {SelectQuery | ConstructQuery | DescribeQuery | AskQuery}, found '?'  (at char 155), (line:3, col:99)"
      ]
     }
    ],
