--- a/rdf_file.ipynb
+++ b/rdf_file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "aca2bcb5",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "9d55ac6e",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "7a75ac47",
    "metadata": {},
    "outputs": [
@@ -47,62 +47,60 @@
     "g.bind(\"fn\", FN)\n",
     "g.bind(\"xsd\", XSD)\n",
     "\n",
-    "# Define Classes (you already have these in your ontology)\n",
-    "g.add((FN.Food, RDF.type, RDFS.Class))\n",
-    "g.add((FN.Food_Wheel_Group, RDF.type, RDFS.Class))\n",
-    "g.add((FN.Food_Wheel_Subgroup, RDF.type, RDFS.Class))\n",
-    "g.add((FN.Diet, RDF.type, RDFS.Class))\n",
-    "g.add((FN.Benefit, RDF.type, RDFS.Class))\n",
+    "# Define Classes (already in ontology)\n",
+    "for cls in [\"Food\", \"Food_Wheel_Group\", \"Food_Wheel_Subgroup\", \"Diet\", \"Benefit\"]:\n",
+    "    g.add((FN[cls], RDF.type, RDFS.Class))\n",
+    "\n",
+    "# Nutrients mapping: column -> (value_prop, unit_prop, unit)\n",
+    "nutrients = {\n",
+    "    \"Calories (kcal)\": (\"hasCalories\", \"hasCaloriesUnit\", \"kcal\"),\n",
+    "    \"PROT (g)\": (\"hasProtein\", \"hasProteinUnit\", \"g\"),\n",
+    "    \"FAT (g)\": (\"hasFat\", \"hasFatUnit\", \"g\"),\n",
+    "    \"VITB12 (µg)\": (\"hasVitaminB12\", \"hasVitaminB12Unit\", \"µg\"),\n",
+    "    \"VITC (mg)\": (\"hasVitaminC\", \"hasVitaminCUnit\", \"mg\"),\n",
+    "    \"VITD (µg)\": (\"hasVitaminD\", \"hasVitaminDUnit\", \"µg\"),\n",
+    "    \"Iron (mg)\": (\"hasIron\", \"hasIronUnit\", \"mg\")\n",
+    "}\n",
     "\n",
     "# Loop through DataFrame and add triples\n",
     "for idx, row in df.iterrows():\n",
-    "    # URL-encode food name for URI\n",
-    "    safe_food_name = quote(row[\"food_name\"], safe=\"\")  # encodes everything unsafe\n",
+    "    safe_food_name = quote(row[\"food_name\"], safe=\"\")\n",
     "    food_uri = URIRef(FN + safe_food_name)\n",
     "\n",
     "    g.add((food_uri, RDF.type, FN.Food))\n",
     "    g.add((food_uri, FN.foodName, Literal(row[\"food_name\"], datatype=XSD.string)))\n",
     "    g.add((food_uri, FN.NEVOCode, Literal(str(row[\"NEVO-code\"]), datatype=XSD.string)))\n",
     "\n",
-    "    # Nutritional data\n",
-    "    if not pd.isnull(row.get(\"Calories (kcal)\")):\n",
-    "        g.add((food_uri, FN.hasCalories, Literal(row[\"Calories (kcal)\"], datatype=XSD.float)))\n",
-    "    if not pd.isnull(row.get(\"PROT (g)\")):\n",
-    "        g.add((food_uri, FN.hasProtein, Literal(row[\"PROT (g)\"], datatype=XSD.float)))\n",
-    "    if not pd.isnull(row.get(\"FAT (g)\")):\n",
-    "        g.add((food_uri, FN.hasFat, Literal(row[\"FAT (g)\"], datatype=XSD.float)))\n",
-    "    if not pd.isnull(row.get(\"VITB12 (µg)\")):\n",
-    "        g.add((food_uri, FN.hasVitaminB12, Literal(row[\"VITB12 (µg)\"], datatype=XSD.float)))\n",
-    "    if not pd.isnull(row.get(\"VITC (mg)\")):\n",
-    "        g.add((food_uri, FN.hasVitaminC, Literal(row[\"VITC (mg)\"], datatype=XSD.float)))\n",
-    "    if not pd.isnull(row.get(\"VITD (µg)\")):\n",
-    "        g.add((food_uri, FN.hasVitaminD, Literal(row[\"VITD (µg)\"], datatype=XSD.float)))\n",
-    "    if not pd.isnull(row.get(\"Iron (mg)\")):\n",
-    "        g.add((food_uri, FN.hasIron, Literal(row[\"Iron (mg)\"], datatype=XSD.float)))\n",
+    "    # Add nutrients (value + unit)\n",
+    "    for col, (val_prop, unit_prop, unit) in nutrients.items():\n",
+    "        val = row.get(col)\n",
+    "        if pd.notnull(val):\n",
+    "            g.add((food_uri, FN[val_prop], Literal(float(val), datatype=XSD.float)))\n",
+    "            g.add((food_uri, FN[unit_prop], Literal(unit, datatype=XSD.string)))\n",
     "\n",
-    "    # Food wheel group and subgroup\n",
-    "    if not pd.isnull(row.get(\"food_wheel_group\")):\n",
+    "    # Food wheel group/subgroup\n",
+    "    if pd.notnull(row.get(\"food_wheel_group\")):\n",
     "        group_uri = URIRef(FN + quote(row[\"food_wheel_group\"], safe=\"\"))\n",
     "        g.add((food_uri, FN.belongsToFoodWheelGroup, group_uri))\n",
-    "    if not pd.isnull(row.get(\"food_wheel_subgroup\")):\n",
+    "    if pd.notnull(row.get(\"food_wheel_subgroup\")):\n",
     "        subgroup_uri = URIRef(FN + quote(row[\"food_wheel_subgroup\"], safe=\"\"))\n",
     "        g.add((food_uri, FN.belongsToFoodWheelSubGroup, subgroup_uri))\n",
     "\n",
-    "    # Diet label\n",
-    "    if not pd.isnull(row.get(\"diet_label\")):\n",
+    "    # Diet\n",
+    "    if pd.notnull(row.get(\"diet_label\")):\n",
     "        diet_uri = URIRef(FN + quote(row[\"diet_label\"], safe=\"\"))\n",
     "        g.add((food_uri, FN.belongsToDiet, diet_uri))\n",
     "\n",
     "    # Benefits\n",
-    "    if not pd.isnull(row.get(\"benefits\")):\n",
+    "    if pd.notnull(row.get(\"benefits\")):\n",
     "        benefit_uri = URIRef(FN + quote(row[\"benefits\"], safe=\"\"))\n",
     "        g.add((food_uri, FN.hasBenefit, benefit_uri))\n",
     "\n",
-    "# Save as RDF\n",
+    "# Serialize RDF/XML\n",
     "g.serialize(\"food_nutrition.rdf\", format=\"xml\")\n",
     "print(\"RDF file generated: food_nutrition.rdf\")\n",
     "\n",
-    "# Serialize RDF to Turtle\n",
+    "# Serialize Turtle\n",
     "g.serialize(\"food_nutrition.ttl\", format=\"turtle\")\n",
     "print(\"RDF Turtle file generated: food_nutrition.ttl\")"
    ]
